<resources>
    <string name="app_name">IOTS</string>
    <string name="we_will_send_you_a_one_time_password_on_this_mobile_number">We will send you a One-Time Password on this mobile number.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_65">+65-</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="did_not_recieve_otp">Did not recieve OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_otp">Verify otp</string>
    <string name="get_otp">get otp</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>