<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/receive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textMobile"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode3"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode4"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode5"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/inputCode6"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_not_recieve_otp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textResendOTP"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonVerify"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/verify_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>